--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/johanhelsing/bevy_ed2d"
 
 [dependencies]
-bevy = "0.14"
+bevy = {version = "0.14", default-features = false, features = [
+    "bevy_sprite"
+]}
 bevy_pancam = "0.14"
 bevy-inspector-egui = "0.25"
 egui_dock = "0.13"
