--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,17 @@ repository = "https://github.com/johanhelsing/bevy_ed2d"
 
 [dependencies]
 bevy = {version = "0.14", default-features = false, features = [
-    "bevy_sprite"
+    "bevy_sprite",
+    "bevy_pbr", # needed for picking not to crash
+    "bevy_ui" # needed for ui picking
 ]}
 bevy_pancam = "0.14"
 bevy-inspector-egui = "0.25"
 egui_dock = "0.13"
 # bevy_mod_picking = "0.20"
 bevy_mod_picking = {git = "https://github.com/johanhelsing/bevy_mod_picking", branch = "fix-sprite-viewport"}
+
+[dev-dependencies]
+bevy = {version = "0.14", default-features = false, features = [
+    "bevy_winit",
+]}
