--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ bevy_mod_picking = {git = "https://github.com/johanhelsing/bevy_mod_picking", br
 [dev-dependencies]
 bevy = {version = "0.14", default-features = false, features = [
     "bevy_winit",
+    "wayland", # needed for winit
 ]}
